--- a/views/editVideo.pug
+++ b/views/editVideo.pug
@@ -1,4 +1,9 @@
 extends layouts/main
 
 block content
-    p editVideo
+    .form-container
+    form(action=`${routes.editVideo(video.id)}`, method="post")
+        input(type="text", name="title", placeholder="Title", value=video.title, required=true)
+        textarea(name="description", placeholder="Description", required=true)=video.description
+        input(type="submit", value="Update Profile")
+    a.form-container__link.form-container__link--delite(href=`${routes.deleteVideo(video.id)}`) Delete Video
