--- a/views/layouts/main.pug
+++ b/views/layouts/main.pug
@@ -6,8 +6,10 @@ html(lang="en")
         meta(http-equiv="X-UA-Compatible", content="ie=edge")
         script(src="https://kit.fontawesome.com/ffe91e9c19.js", crossorigin="anonymous")
         title #{pageTitle} | #{siteName}
+        link(rel="stylesheet", href="/static/styles.css")
     body
         include ../partials/header
         main
             block content
         include ../partials/footer
+        script(src="/static/main.js")
