--- a/views/videoDetail.pug
+++ b/views/videoDetail.pug
@@ -3,8 +3,13 @@ extends layouts/main
 block content
     .video__player
         video(src=`/${video.fileUrl}`, controls=true)
-    .viceo__info
-        a(href=routes.editVideo) Edit Video
+    .video__info
+        a(href=routes.editVideo(video.id)) Edit Video
         h5.video__title=video.title
         span.video__views=video.views
         p.video__description=video.description
+    .video__comments
+        if video.comments.lenght === 1
+            span.video__comment-number 1 comment
+        else
+            span.video__comment-number `#{video.comments.lenght} comments`
