--- a/src/assets/scss/pages/videoDetail.scss
+++ b/src/assets/scss/pages/videoDetail.scss
@@ -56,6 +56,9 @@
         &:not(:last-child) {
           margin-bottom: 15px;
         }
+        span:last-child {
+          cursor: pointer;
+        }
       }
     }
   }
