--- a/src/views/editVideo.pug
+++ b/src/views/editVideo.pug
@@ -5,6 +5,6 @@ block content
         form(action=`${routes.editVideo(video.id)}`, method="post")
             input(type="text", name="title", placeholder="Title", value=video.title, required=true)
             textarea(name="description", placeholder="Description", required=true)=video.description
-            input(type="submit", value="Update Profile")
+            input(type="submit", value="Update Video")
         a.form-container__link(href=`${routes.deleteVideo(video.id)}`)
             button.delete Delete Video
