--- a/src/views/layouts/main.pug
+++ b/src/views/layouts/main.pug
@@ -1,3 +1,5 @@
+include ../mixins/message
+
 doctype html
 html(lang="en")
     head
@@ -9,11 +11,20 @@ html(lang="en")
         link(rel="stylesheet", href="/static/styles.css")
     body
         if messages.error
-            span messages.error
+            +message({
+                type:"error",
+                text: messages.error
+            })
         else if messages.info
-            span messages.info
+            +message({
+                type:"info",
+                text: messages.info
+            })
         else if messages.success
-            span messages.success
+            +message({
+                type:"success",
+                text: messages.success
+            })
         include ../partials/header
         main
             block content
