로그인 한 사람만 코멘트 쓸수 있게 수정

--- a/src/views/videoDetail.pug
+++ b/src/views/videoDetail.pug
@@ -28,13 +28,15 @@ block content
                 span.video__comment-number
                     span#jsCommentNumber=video.comments.length
                     |  comments
-            form.add__comment#jsAddComment
-                input(type="text", placeholder="Add a comment")
-            ul.video__comments-list#jsCommentList
-                each comment in video.comments.reverse()
-                    li
-                        span=comment.text
-                        if loggedUser && loggedUser.id == video.creator.id 
-                            span.del__comment#jsDelComment
-                                |    ✖️
-                                input(type="hidden", value=comment.id)#jsDelHidden
+                if loggedUser
+                    form.add__comment#jsAddComment
+                        input(type="text", placeholder="Add a comment")
+                
+                ul.video__comments-list#jsCommentList
+                    each comment in video.comments.reverse()
+                        li
+                            span=comment.text
+                            if loggedUser && loggedUser.id == video.creator.id 
+                                span.del__comment#jsDelComment
+                                    |    ✖️
+                                    input(type="hidden", value=comment.id)#jsDelHidden
